Archive2/b5/bc0077ddea4539/output
main.cpp:15:11: error: 'template<class T> class A' used without template parameters
     using A::operator T*;
           ^
